[workspace]
members = ["crates/pulsing-actor", "crates/pulsing-bench", "crates/pulsing-bench-py", "crates/pulsing-py"]
resolver = "3"

# Allow coverage_nightly cfg for cargo-llvm-cov
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.package]
version = "0.1.2"
edition = "2021"
description = "Pulsing - Distributed Actor Framework"
authors = ["Reiase <reiase@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/DeepLink-org/Pulsing"
keywords = ["actor", "distributed", "async", "inference"]

[workspace.dependencies]
pulsing-actor = { path = "crates/pulsing-actor" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["codec", "net", "rt"] }
tokio-stream = { version = "0.1" }
futures-util = { version = "0.3" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = "3.9"
bytes = { version = "1" }
bincode = "1.3"

# Async utilities
async-trait = { version = "0.1" }
futures = { version = "0.3" }

# Concurrent data structures
dashmap = { version = "6.1" }

# Error handling
anyhow = { version = "1" }
thiserror = { version = "2.0" }

# Logging & Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-opentelemetry = { version = "0.28" }
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
log = "0.4"
env_logger = "0.11"

# Utilities
uuid = { version = "1", features = ["v4", "fast-rng"] }
rand = { version = "0.9" }
rand_distr = "0.5"
chrono = "0.4"
colored = "2.1"
humantime = "2.1"
indicatif = "0.17"
rayon = "1.10"
sysinfo = "0.33"

# HTTP
# axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1.7", features = ["http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
reqwest-eventsource = "0.6"

# TLS
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
tokio-rustls = { version = "0.26" }
rcgen = { version = "0.13" }
aws-lc-rs = { version = "1.8" }
rustls-pemfile = { version = "2" }
time = { version = "0.3" }

# CLI (removed clap - now using Python hyperparameter)
strum_macros = "0.27"

# Testing
tokio-test = "0.4"
mockito = "1.5"
tabled = "=0.14"

# Other
tokenizers = { version = "0.21", features = ["http"] }
hf-hub = { version = "0.4", features = ["tokio"] }
vergen-gitcl = "1.0"
pkcs8 = { version = "0.10", features = ["alloc"] }
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["pkcs8"] }
der = "0.7"
