[project]
name = "pulsing"
version = "0.1.2"
description = "Pulsing: Backbone for distributed AI systems. Actor runtime with streaming, zero dependencies, and built-in discovery."
readme = "README.md"
authors = [
    { name = "Reiase", email = "reiase@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "uvloop>=0.21.0",
    "aiohttp>=3.9.0",
    "hyperparameter>=0.5.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
keywords = ["actor", "distributed", "async", "llm", "inference"]

[project.urls]
Homepage = "https://github.com/DeepLink-org/Pulsing"
Repository = "https://github.com/DeepLink-org/Pulsing"
Documentation = "https://github.com/DeepLink-org/Pulsing#readme"
Issues = "https://github.com/DeepLink-org/Pulsing/issues"
Changelog = "https://github.com/DeepLink-org/Pulsing/blob/main/CHANGELOG.md"

[project.optional-dependencies]
storage = [
    "pylance",
    "pyarrow>=22.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "maturin>=1.0",
    "pylance",
    "pyarrow>=22.0.0",
]

[project.scripts]
pulsing = "pulsing.cli.__main__:main"

[tool.maturin]
module-name = "pulsing._core"
manifest-path = "crates/pulsing-py/Cargo.toml"
python-packages = ["pulsing"]
python-source = "python"
sdist-include = ["LICENSE", "README.md"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests/python"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.codespell]
skip = "*.lock,target/*,*.whl"
ignore-words-list = "crate"
