[project]
name = "pulsing-docs"
version = "0.1.2"
description = "Documentation for Pulsing - Backbone for Distributed AI Systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-material-extensions>=1.3.0",
    "mkdocs-static-i18n>=1.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "mkdocs-linkcheck>=1.0.0",
    "jieba>=0.42.1",  # Chinese word segmentation for search
]

[tool.uv]
dev-dependencies = [
    "mkdocs-minify-plugin>=0.7.0",  # Minify HTML output
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",  # Add git revision date
    "ruff>=0.4.0",  # For linting markdown code blocks
]

[tool.ruff]
# Only lint Python code blocks in markdown files
include = ["*.py", "*.md"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]  # Ignore line length in documentation
