[package]
name = "pulsing-actor"
version.workspace = true
edition = "2021"
description = "Lightweight distributed actor framework for Pulsing"
authors.workspace = true
license.workspace = true
repository = "https://github.com/reiase/pulsing"
keywords = ["actor", "distributed", "cluster", "gossip"]

[features]
default = []
# Enable integration tests that require a running cluster
integration = []

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
rand = { workspace = true }

# HTTP transport
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "ping_pong"
path = "../../examples/rust/ping_pong.rs"

[[example]]
name = "cluster"
path = "../../examples/rust/cluster.rs"

[[example]]
name = "message_patterns"
path = "../../examples/rust/message_patterns.rs"

[[example]]
name = "named_actors"
path = "../../examples/rust/named_actors.rs"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[lints]
workspace = true
