[package]
name = "pulsing-bench"
version = "1.1.0"  # Keep original version for compatibility
edition.workspace = true
authors = ["Hugo Larcher <hugo.larcher@huggingface.co>"]
license.workspace = true
repository = "https://github.com/huggingface/inference-benchmarker"
readme = "README.md"

[dependencies]
# Use workspace dependencies where available
reqwest-eventsource = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tokenizers = { workspace = true }
rand_distr = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
strum_macros = { workspace = true }
humantime = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
hf-hub = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
serde_with = { workspace = true }
sysinfo = { workspace = true }
mockito = { workspace = true }
tabled = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
vergen-gitcl = { workspace = true }

[lib]
name = "pulsing_bench"
path = "src/lib.rs"
