[package]
name = "pulsing-bench"
version = "1.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Actor-based LLM inference benchmark tool"

[features]
default = []
python = ["pyo3", "pyo3-async-runtimes", "tracing-subscriber"]

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# HTTP
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
humantime = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Tokenizer for accurate token counting
tokenizers = { workspace = true }
hf-hub = { workspace = true }

# Pulsing Actor System
pulsing-actor = { workspace = true }

# PyO3 dependencies (optional, for python bindings)
pyo3 = { version = "0.23.4", default-features = false, features = [
  "macros",
  "experimental-async",
  "extension-module",
  "py-clone",
  "abi3-py310",
], optional = true }
pyo3-async-runtimes = { version = "0.23.0", default-features = false, features = [
  "attributes",
  "tokio-runtime",
  "unstable-streams",
], optional = true }

[build-dependencies]
vergen-gitcl = { workspace = true }

[lib]
name = "pulsing_bench"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
