[package]
name = "pulsing-py"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Python bindings for Pulsing Actor System"

[features]
default = ["tls"]
tls = ["pulsing-actor/tls"]

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pulsing-actor = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
pythonize = "0.23"
uuid = { workspace = true }
crossbeam-channel = "0.5"

[dependencies.pyo3]
version = "0.23.4"
default-features = false
features = [
  "macros",
  "experimental-async",
  "extension-module",
  "py-clone",
  "abi3-py310",
]

[dependencies.pyo3-async-runtimes]
version = "0.23.0"
default-features = false
features = [
  "attributes",
  "tokio-runtime",
  "unstable-streams",
]
